maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value random3
random3 = rand(1) + rand(1) + rand (1)
^Escaper:7: error: not found: value random3
    if (random3 == 0) {droite()}
        ^Escaper:8: error: not found: value random3
    if (random3 ==1 && !estFaceMur()) {avance()}
        ^Escaper:9: error: not found: value random3
    if (random3 == 2) {gauche()} 
        ^