maze.lessons.maze.island.IslandMaze.scala.code
override def run() {    while(!estSurBiscuit()){

random3 = rand(1) + rand(1) + rand (1)
    
    if (random3 == 0) {droite()}
    if (random3 ==1 && !estFaceMur()) {avance()}
    if (random3 == 2) {gauche()} 
}
prendBiscuit();
}
